@@ -8,6 +8,7 @@ gem2deb (0.17) UNRELEASED; urgency=medium
     - when acting on an existing source package, read the source package name
       from debian/changelog.
     - always create test suite files to make dh-make-ruby idempotent
+    - suggest checking dependencies during build and on DEP-8 tests
   * gem2deb-test-runner:
     - add -c/--check-dependencies to check for dependencies (as declared in
       the Rubygems metadata, not as declared in debian/control) before running
